dynamix/force-app/main/default/objects/Booking_Line_Items__c/Booking_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Booking Line Items</label>
    <nameField>
        <label>Booking Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>