dynamix/force-app/main/default/objects/Booking_Line_Items__c/fields/Add_On__c.field-meta.xml
<CustomField>
    <fullName>Add_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add On</label>
    <referenceTo>Add_On__c</referenceTo>
    <relationshipLabel>Booking Line Items</relationshipLabel>
    <relationshipName>Booking_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>