dynamix/force-app/main/default/objects/Booking_Line_Items__c/fields/Project_Add_On_Charges__c.field-meta.xml
<CustomField>
    <fullName>Project_Add_On_Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Add On Charges</label>
    <referenceTo>Project_Add_On_Charges__c</referenceTo>
    <relationshipLabel>Booking Line Items</relationshipLabel>
    <relationshipName>Booking_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>