dynamix/force-app/main/default/objects/Booking_Line_Items__c/fields/Property_Add_On_Charges__c.field-meta.xml
<CustomField>
    <fullName>Property_Add_On_Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Add On Charges</label>
    <referenceTo>Property_Add_On__c</referenceTo>
    <relationshipLabel>Booking Line Items</relationshipLabel>
    <relationshipName>Booking_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>